--- a/src/main/resources/templates/footer.html
+++ b/src/main/resources/templates/footer.html
@@ -9,7 +9,7 @@
 <body>
 	
 	<footer class="bg-dark text-light" th:fragment="footer">
-		<p>&copy; Dev Rezaur</p>
+		<p>&copy; Moumi ghosh</p>
 	</footer>
 	
 	<!-- Bootstrap JS -->
